add_executable(BinaryTreeTravel
        01_BinaryTreeTravel/main.c
        01_BinaryTreeTravel/binaryTree.c
        01_BinaryTreeTravel/binaryTree.h)
add_executable(ThreadBinaryTree
        02_ThreadBinaryTree/main.c
        02_ThreadBinaryTree/threadTree.c
        02_ThreadBinaryTree/threadTree.h)
add_executable(BinarySearchTree
        03_BinarySearchTree/main.c
        03_BinarySearchTree/searchTree.c
        03_BinarySearchTree/searchTree.h)