add_executable(BinaryTreeTravel
        01_BinaryTreeTravel/main.c
        01_BinaryTreeTravel/binaryTree.c
        01_BinaryTreeTravel/binaryTree.h)
add_executable(ThreadBinaryTree
        02_ThreadBinaryTree/main.c
        02_ThreadBinaryTree/threadTree.c
        02_ThreadBinaryTree/threadTree.h)
add_executable(BinarySearchTree
        03_BinarySearchTree/main.c
        03_BinarySearchTree/searchTree.c
        03_BinarySearchTree/searchTree.h)
add_executable(AVLTree
        04_AVLTree/main.c
        04_AVLTree/AVLTree.c
        04_AVLTree/AVLTree.h)
add_executable(QuickFindSet
        05_UnionFindSet/main1.c
        05_UnionFindSet/quickFind.c
        05_UnionFindSet/quickFind.h)
add_executable(QuickUnionSet
        05_UnionFindSet/main2.c
        05_UnionFindSet/quickUnion.c
        05_UnionFindSet/quickUnion.h)