add_executable(matrixGraph 01_MatrixGraph/main.c
        01_MatrixGraph/matrixGraph.c
        01_MatrixGraph/matrixGraph.h)
add_executable(listGraph 02_ListGraph/main.c
        02_ListGraph/listGraph.c
        02_ListGraph/listGraph.h)
add_executable(crossLinkGraph 03_CrossLinkGraph/main.c
        03_CrossLinkGraph/crossLinkGraph.c
        03_CrossLinkGraph/crossLinkGraph.h)