add_executable(matrixGraph 01_MatrixGraph/main.c
        01_MatrixGraph/matrixGraph.c
        01_MatrixGraph/matrixGraph.h)
add_executable(listGraph 02_ListGraph/main.c
        02_ListGraph/listGraph.c
        02_ListGraph/listGraph.h)
add_executable(crossLinkGraph 03_CrossLinkGraph/main.c
        03_CrossLinkGraph/crossLinkGraph.c
        03_CrossLinkGraph/crossLinkGraph.h)
add_executable(multiListGraph 04_MultiListGraph/main.c
        04_MultiListGraph/multiListGraph.c
        04_MultiListGraph/multiListGraph.h)
add_executable(KruskalAlgorithmTree 05_MinimumSpanningTree/main.c
        05_MinimumSpanningTree/Kruskal.c
        05_MinimumSpanningTree/Kruskal.h
        01_MatrixGraph/matrixGraph.c
        01_MatrixGraph/matrixGraph.h)