add_executable(seqTable 01_seqTable/main.c
        01_seqTable/seqTable.c
        01_seqTable/seqTable.h)
add_executable(linkList 02_linkList/main1.c
        02_linkList/linkList.c
        02_linkList/linkList.h)
add_executable(chainList 02_linkList/main2.c
        02_linkList/chainList.c
        02_linkList/chainList.h)
add_executable(linkLoop 03_linkLoop/main.c
        03_linkLoop/linkLoop.c
        03_linkLoop/linkLoop.h)
add_executable(doubleLinkLoop 04_doubleLinkLoop/main.c
        04_doubleLinkLoop/doubleLinkLoop.c
        04_doubleLinkLoop/doubleLinkLoop.h
)